objects/Invoice_Billing_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Unit_Price__c</fullName>
        <label>Amount (Unit Price)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Approved_By__c</fullName>
        <formula>Invoice_Request__r.Discount_Approved_By__r.FirstName +&apos; &apos;+ Invoice_Request__r.Discount_Approved_By__r.LastName</formula>
        <label>Discount Approved By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Recharge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expense Recharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM_Code__c</fullName>
        <label>IM Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <label>Invoice Request</label>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipLabel>PS Invoice Billing Details</relationshipLabel>
        <relationshipName>Invoice_Billing_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_Id__c</fullName>
        <label>Order Product Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Billing Details</relationshipLabel>
        <relationshipName>Invoice_Billing_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>( Amount_Unit_Price__c *  Quantity__c ) -  Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Billing Detail</label>
    <nameField>
        <displayFormat>PS-INV-{0000}</displayFormat>
        <label>PS Billing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Billing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>